# Image-Clustering

./: .gitignore  CMakeLists.txt  README.md  example.cc
inc/: clustering.h  constants.h  k_means.h  term_criteria.h
src/: clustering.cc  k_means.cc
